--- a/app/src/main/res/layout/activity_addexercisepage.xml
+++ b/app/src/main/res/layout/activity_addexercisepage.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddExercisePage">
+    tools:context=".AddExercisePage"
+    android:background="@drawable/background">
 
     <EditText
         android:id="@+id/workout_name_text"
@@ -17,7 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColorHint="@color/black"/>
 
     <Spinner
         android:id="@+id/workout_category_spinner"
@@ -56,16 +58,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/addWorkoutbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/green"
         android:text="add"
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exercisedimageview_add" />
+        app:layout_constraintTop_toBottomOf="@+id/exercisedimageview_add"
+        app:layout_constraintVertical_bias="0.031" />
+
+
 
     <ImageView
         android:id="@+id/exercisedimageview_add"
