--- a/app/src/main/res/layout/activity_addfoodpage.xml
+++ b/app/src/main/res/layout/activity_addfoodpage.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddFoodPage"
-    android:background="@color/white">
+    android:background="@drawable/background">
 
     <EditText
         android:id="@+id/food_kal_text"
@@ -13,15 +13,14 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Kal"
+        android:hint="Calories"
         android:inputType="number"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/food_fat_text"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/food_fat_text" />
 
     <EditText
         android:id="@+id/food_fat_text"
@@ -29,59 +28,59 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Fat"
+        android:hint="Fats"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/food_prot_text"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/green"/>
+        android:textColorHint="@color/black" />
 
     <EditText
         android:id="@+id/food_prot_text"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Protein"
+        android:hint="Proteins"
         android:inputType="number"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/food_carb_text"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/food_carb_text" />
 
     <EditText
         android:id="@+id/food_carb_text"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Carbohydrates"
         android:inputType="number"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/food_category_spinner"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/food_category_spinner" />
 
     <Button
         android:id="@+id/addFoodbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/green"
         android:text="add"
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/foodimageview_add"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintVertical_bias="0.031" />
 
     <EditText
         android:id="@+id/food_name_text"
@@ -89,7 +88,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="name"
+        android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -97,13 +96,13 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/green"/>
+        />
 
     <Spinner
         android:id="@+id/food_category_spinner"
         android:layout_width="210dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
