--- a/app/src/main/res/layout/activity_fitlifepage.xml
+++ b/app/src/main/res/layout/activity_fitlifepage.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FitlifePage"
-    android:background="@color/white">
+    android:background="@drawable/background">
 
     <ImageView
         android:id="@+id/FitLif_logo"
@@ -25,30 +25,35 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="56dp"
         android:text="FitLife"
-        android:textColor="#2EC314"
+        android:textColor="@color/grey"
         app:autoSizeTextType="uniform"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/FitLif_logo"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fitlife_login_button"
-        android:layout_width="160dp"
-        android:layout_height="85dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="208dp"
-        android:background="@color/green"
+        android:layout_width="210dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="204dp"
+        android:background="@drawable/custom_button"
         android:text="login"
+        android:textColor="@color/grey"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FitLif_logo" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fitlife_signup_button"
-        android:layout_width="160dp"
-        android:layout_height="85dp"
-        android:layout_marginStart="104dp"
+        android:layout_width="210dp"
+        android:layout_height="60dp"
         android:layout_marginTop="16dp"
-        android:background="@color/grey"
+        android:background="@drawable/custom_button"
         android:text="signup"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/grey"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/fitlife_login_button"
         app:layout_constraintTop_toBottomOf="@+id/fitlife_login_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
