--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignupPage"
-    android:background="@color/white">
+    android:background="@drawable/background"
+    style="@style/Theme.AppCompat.DayNight.NoActionBar">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signup_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/green"
+        android:background="@drawable/custom_button"
         android:text="signup"
+        android:textColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,9 +26,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
         android:hint="select a Username"
+        app:helperTextTextColor="@color/black"
         android:textColorHint="@color/black"
         app:boxStrokeColor="@color/green"
         app:counterEnabled="true"
@@ -119,10 +121,12 @@
         app:counterMaxLength="20"
         app:endIconMode="password_toggle"
         app:endIconTint="@color/green"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_TextInputLayout_signup"
+        app:layout_constraintVertical_bias="0.0"
         app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
         app:startIconTint="@color/green">
 
@@ -138,9 +142,10 @@
         android:id="@+id/signup_back_btn"
         android:layout_width="88dp"
         android:layout_height="47dp"
-        android:layout_marginTop="40dp"
-        android:background="@color/green"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custom_button"
         android:text="back"
+        android:textColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +156,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="110dp"
         android:layout_marginEnd="32dp"
         android:text="In order to recover the password answer to  the following question:"
         android:textColor="@color/black"
