--- a/app/src/main/res/layout/my_row_food.xml
+++ b/app/src/main/res/layout/my_row_food.xml
@@ -9,11 +9,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="2dp">
+        android:layout_marginRight="2dp"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:padding="12dp">
 
             <TextView
@@ -22,7 +24,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="80dp"
-                android:text="kal"
+                android:text="cal"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/testo_fisso_kal"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="80dp"
-                android:text="kal:"
+                android:text="cal:"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/food_fat"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,6 +74,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="80dp"
                 android:text="carb"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/testo_fisso_carb"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -81,6 +86,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="80dp"
                 android:text="fat"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/tsto_fisso_fat"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -91,6 +97,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="80dp"
                 android:text="prot"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/testo_fisso_prot"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -122,6 +129,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="80dp"
                 android:text="carb:"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/food_img"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -132,6 +140,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="80dp"
                 android:text="prot:"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/food_carb"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -142,6 +151,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="80dp"
                 android:text="fat:"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/food_prot"
                 app:layout_constraintTop_toTopOf="parent" />
 
