--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -50,7 +50,8 @@
         android:layout_marginTop="16dp"
         android:hint="weight"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
@@ -74,7 +75,8 @@
         android:layout_marginStart="8dp"
         android:hint="height"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
@@ -98,8 +100,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:hint="carb"
+        app:boxStrokeColor="@color/black"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
@@ -123,7 +126,8 @@
         android:layout_marginStart="8dp"
         android:hint="protein"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
@@ -146,7 +150,8 @@
         android:layout_height="wrap_content"
         android:hint="fat"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
@@ -169,7 +174,8 @@
         android:layout_height="wrap_content"
         android:hint="calories"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
