--- a/app/src/main/res/layout/spinner_dropdown_layout.xml
+++ b/app/src/main/res/layout/spinner_dropdown_layout.xml
@@ -5,6 +5,7 @@
     android:padding="10dp"
     android:textColor="@color/black"
     android:text="aaaaaaa"
-    android:textSize="20sp">
+    android:textSize="20sp"
+    android:background="@color/white">
 
 </TextView>
