--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username_TextInputLayout_login"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -17,7 +17,8 @@
         android:layout_marginEnd="32dp"
         android:hint="username"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="clear_text"
@@ -26,7 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:startIconDrawable="@drawable/ic_baseline_person_24"
-        app:startIconTint="@color/green">
+        app:startIconTint="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/usernametxt_login"
@@ -38,7 +39,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_TextInputLayout_login"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -56,9 +57,10 @@
         app:layout_constraintVertical_bias="0.016"
         app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
-        app:startIconTint="@color/green"
-        app:endIconTint="@color/green">
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
+        app:startIconTint="@color/black"
+        app:endIconTint="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordtxt_login"
@@ -93,5 +95,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:stateListAnimator="@null"/>
+
+    <TextView
+        android:id="@+id/error_loginpage_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:text="TextView"
+        android:textColor="@color/red"
+        android:textSize="16sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
