--- a/app/src/main/res/layout/activity_signupinfopage.xml
+++ b/app/src/main/res/layout/activity_signupinfopage.xml
@@ -11,20 +11,19 @@
         android:id="@+id/female_button"
         android:layout_width="160dp"
         android:layout_height="85dp"
-        android:layout_marginTop="48dp"
         android:background="@color/grey"
         android:text="female"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/male_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/male_button" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/male_button"
         android:layout_width="160dp"
         android:layout_height="85dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:background="@color/grey"
         android:text="male"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/green"
+        android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/kg_image"
         android:ems="6"
         android:hint="weight"
@@ -77,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/green"
+        android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/height_image"
         android:ems="6"
         android:hint="height"
@@ -93,8 +92,8 @@
         android:id="@+id/signup_carb_goal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/green"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/grams_image"
         android:ems="10"
         android:hint="carbs goal"
@@ -110,8 +109,8 @@
         android:id="@+id/signup_prot_goal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/green"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/grams_image"
         android:ems="10"
         android:hint="proteins goal"
@@ -128,7 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/green"
+        android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/grams_image"
         android:ems="10"
         android:hint="fats goal"
@@ -145,7 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/green"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="calories goal"
         android:inputType="number"
@@ -155,6 +154,21 @@
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_fat_goal" />
+
+    <TextView
+        android:id="@+id/error_signupinfopage_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:text="TextView"
+        android:textColor="@color/red"
+        android:textSize="16sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_back_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
