--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -30,8 +30,9 @@
         android:layout_marginEnd="32dp"
         android:hint="select a Username"
         app:helperTextTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:hintTextColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="clear_text"
@@ -40,7 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:startIconDrawable="@drawable/ic_baseline_person_24"
-        app:startIconTint="@color/green">
+        app:startIconTint="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/usernametxt_signup"
@@ -58,12 +59,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:hint="select a Password"
-        android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
+        android:textColorHint="@color/black"
+        app:hintTextColor="@color/black"
         app:endIconMode="password_toggle"
-        app:endIconTint="@color/green"
+        app:endIconTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -71,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/username_TextInputLayout_signup"
         app:layout_constraintVertical_bias="0.0"
         app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
-        app:startIconTint="@color/green">
+        app:startIconTint="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordtxt_singup"
@@ -90,8 +92,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:hint="answer"
+        app:hintTextColor="@color/black"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,12 +118,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:hint="confirm the Password"
-        android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/green"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
+        android:textColorHint="@color/black"
+        app:hintTextColor="@color/black"
         app:endIconMode="password_toggle"
-        app:endIconTint="@color/green"
+        app:endIconTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -128,7 +132,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password_TextInputLayout_signup"
         app:layout_constraintVertical_bias="0.0"
         app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
-        app:startIconTint="@color/green">
+        app:startIconTint="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confir_mpasswordtxt_singup"
@@ -142,7 +146,7 @@
         android:id="@+id/signup_back_btn"
         android:layout_width="88dp"
         android:layout_height="47dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/custom_button"
         android:text="back"
         android:textColor="@color/grey"
@@ -156,7 +160,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:text="In order to recover the password answer to  the following question:"
         android:textColor="@color/black"
@@ -185,6 +189,7 @@
         android:layout_marginEnd="32dp"
         android:text="Error: the two password do no match"
         android:textColor="@color/red"
+        android:textSize="16sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -195,9 +200,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:text="Please fill up all the fields"
         android:textColor="@color/red"
+        android:textSize="16sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
