--- a/app/src/main/res/layout/activity_addexercisepage.xml
+++ b/app/src/main/res/layout/activity_addexercisepage.xml
@@ -13,7 +13,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="132dp"
         android:ems="10"
-        android:hint="name"
+        android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
