--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChangePassword"
-    android:background="@color/white">
+    android:background="@drawable/background">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/change_password_btn2"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginStart="96dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/green"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/custom_button"
         android:text="change password"
         app:layout_constraintStart_toStartOf="@+id/confirm_new_password_layout"
         app:layout_constraintTop_toBottomOf="@+id/confirm_new_password_layout" />
