--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -8,37 +8,38 @@
     tools:context=".UserPage"
     android:layout_above="@id/constraintLayout"
     android:layout_below="@id/constraintLayout2"
-    android:background="@color/white"
+    android:background="@drawable/background"
     android:theme="@style/Theme.MaterialComponents">
 
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/change_goals_btn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="130dp"
+        android:layout_height="41dp"
         android:layout_marginStart="88dp"
-        android:background="@color/green"
+        android:background="@drawable/custom_button_2"
         android:text="change goals"
         app:layout_constraintStart_toStartOf="@+id/fat_layout"
         app:layout_constraintTop_toBottomOf="@+id/fat_layout" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/change_stats_btn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
         android:layout_marginStart="88dp"
-        android:background="@color/green"
+        android:background="@drawable/custom_button_2"
         android:text="change body Stats"
         app:layout_constraintStart_toStartOf="@+id/weight_layout"
         app:layout_constraintTop_toBottomOf="@+id/weight_layout" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/change_image_btn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:background="@color/green"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/custom_button_2"
         android:text="change image"
-        app:layout_constraintEnd_toEndOf="@+id/userimageview"
+        app:layout_constraintStart_toStartOf="@+id/userimageview"
         app:layout_constraintTop_toBottomOf="@+id/userimageview" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -47,16 +48,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="250dp"
         android:hint="weight"
         android:textColorHint="@color/black"
-        app:hintTextColor="@color/black"
         app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
+        app:hintTextColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cal_text_show_userpage">
+        app:layout_constraintTop_toTopOf="parent"
+        app:helperText="Required">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/weight_EditText"
@@ -81,7 +83,8 @@
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
         app:layout_constraintStart_toEndOf="@+id/weight_layout"
-        app:layout_constraintTop_toTopOf="@+id/weight_layout">
+        app:layout_constraintTop_toTopOf="@+id/weight_layout"
+        app:helperText="Required">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/height_EditText"
@@ -97,17 +100,18 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:hint="carb"
-        app:boxStrokeColor="@color/black"
         android:textColorHint="@color/black"
-        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
+        app:hintTextColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/change_stats_btn">
+        app:layout_constraintTop_toBottomOf="@+id/change_stats_btn"
+        app:helperText="Required">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/carb_EditText"
@@ -132,7 +136,8 @@
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
         app:layout_constraintStart_toEndOf="@+id/carb_layout"
-        app:layout_constraintTop_toTopOf="@+id/carb_layout">
+        app:layout_constraintTop_toTopOf="@+id/carb_layout"
+        app:helperText="Required">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/prot_EditText"
@@ -156,7 +161,8 @@
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
         app:layout_constraintStart_toStartOf="@+id/carb_layout"
-        app:layout_constraintTop_toBottomOf="@+id/carb_layout">
+        app:layout_constraintTop_toBottomOf="@+id/carb_layout"
+        app:helperText="Required">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fat_EditText"
@@ -180,7 +186,8 @@
         app:counterMaxLength="20"
         app:helperTextTextColor="@color/red"
         app:layout_constraintStart_toStartOf="@+id/prot_layout"
-        app:layout_constraintTop_toBottomOf="@+id/prot_layout">
+        app:layout_constraintTop_toBottomOf="@+id/prot_layout"
+        app:helperText="Required">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/cal_EditText"
@@ -193,11 +200,11 @@
 
     <ImageView
         android:id="@+id/userimageview"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/no_image2" />
 
@@ -235,73 +242,13 @@
         android:id="@+id/username_text_show_userpage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="username"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/weight_text_show_userpage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="weight"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/username_text_show_userpage"
-        app:layout_constraintTop_toBottomOf="@+id/username_text_show_userpage" />
-
-    <TextView
-        android:id="@+id/height_text_show_userpage"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="height"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/weight_text_show_userpage"
-        app:layout_constraintTop_toBottomOf="@+id/weight_text_show_userpage" />
-
-    <TextView
-        android:id="@+id/carb_text_show_userpage"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="carb goals"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/height_text_show_userpage"
-        app:layout_constraintTop_toBottomOf="@+id/height_text_show_userpage" />
-
-    <TextView
-        android:id="@+id/prot_text_show_userpage"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="prot goals"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/carb_text_show_userpage"
-        app:layout_constraintTop_toBottomOf="@+id/carb_text_show_userpage" />
-
-    <TextView
-        android:id="@+id/fat_text_show_userpage"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="fat goals"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/prot_text_show_userpage"
-        app:layout_constraintTop_toBottomOf="@+id/prot_text_show_userpage" />
-
-    <TextView
-        android:id="@+id/cal_text_show_userpage"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="calories goals"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/fat_text_show_userpage"
-        app:layout_constraintTop_toBottomOf="@+id/fat_text_show_userpage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
