--- a/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/app/src/main/res/layout/layout_custom_dialog.xml
@@ -51,7 +51,8 @@
             android:layout_height="70dp"
             app:layout_constraintTop_toBottomOf="@+id/dialog_title"
             app:srcCompat="@drawable/ic_baseline_fastfood_24"
-            android:layout_marginRight="30dp"/>
+            android:layout_marginRight="30dp"
+            android:background="@color/celeste"/>
 
         <ImageView
             android:id="@+id/dialog_exercise_imgview"
@@ -93,21 +94,23 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- some views -->
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/dialog_close_btn"
-            android:layout_width="135dp"
-            android:layout_height="50dp"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
             android:text="close"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/custom_button_2"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/dialog_ok_btn"
-            android:layout_width="135dp"
-            android:layout_height="50dp"
-            android:text="ok"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:text="Apply"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/custom_button_2"/>
     </LinearLayout>
 
 
